--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width">
 	<title>Matter Design Test</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="media/font-awesome/css/font-awesome.min.css">
@@ -40,7 +40,7 @@
 						</span>
 					</li>
 				</ul>
-				<i class="hamburger fa fa-bars" aria-hidden="true"></i>
+				<i class="hamburger fa fa-bars fa-2x" aria-hidden="true"></i>
 			</div>
 			<h1 class="hero-text">
 			The financial and accounting gateway that gets it done.
@@ -61,7 +61,7 @@
 		<div class="form">
 			<div class="form-content">
 				<div class="form-text">Receive info on our programs</div>
-				<div class="email-line">Your email</div>
+				<div class="email-line">Your email<button class="mobile-send">SEND</button></div>
 				<button class="send">SEND</button>
 			</div>
 		</div>
